Adicionado o dotenv e a funcao de de excluir um livro

--- a/views/produtos/lista.ejs
+++ b/views/produtos/lista.ejs
@@ -19,6 +19,7 @@
                         <td><a href="">Preço</a></td>
                         <td><a href="">Descrição</a></td>
                         <td><a href="">Nova Promoção</a></td>
+                        <td><a href="">Acão</a></td>
                     </tr>
                     </thead>
                     <tbody>                   
@@ -38,6 +39,9 @@
                                     </div>
                                 </form><!--
                             --></td>
+                            <td>
+                                <a href="/produtos/<%= livro.id %>">Remover</a>
+                            </td>
                         </tr>
                       <% }) %>
                     </tbody>
