Explicação do var

--- a/views/produtos/lista.ejs
+++ b/views/produtos/lista.ejs
@@ -40,6 +40,9 @@
                                 </form><!--
                             --></td>
                             <td>
+                                <a href="/produtos/atualiza/<%= livro.id %>">Atualiza</a>
+                            </td>
+                            <td>
                                 <a href="/produtos/<%= livro.id %>">Remover</a>
                             </td>
                         </tr>
